--- a/docs/dailyblogroll.css
+++ b/docs/dailyblogroll.css
@@ -9,8 +9,14 @@ h1 {
     color: white;
 }
 
-h1 > a, h1 > a:visited, h1 > a:link {
+h1 a, h1 a:visited, h1 a:link {
     color: #f1f0e9;
+    text-decoration: none;
+}
+
+h1 span a, h1 span a:visited, h1 span a:link {
+    font-size: 10pt;
+    color: #888;
     text-decoration: none;
 }
 
