Removing the redirect

--- a/templates/dailyblogtemplate.html
+++ b/templates/dailyblogtemplate.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="Cache-Control" content="max-age=14400, must-revalidate">
+    <meta http-equiv="Cache-Control" content="max-age=600, must-revalidate">
     <title>{{ vars.title }}</title>
-    <link rel="stylesheet" href="dailyblogroll.css">
+    <link rel="stylesheet" href="dailyblogroll.css?v={{ vars.date }}">
     <link rel="icon" href="icons/favicon-calendar.ico" sizes="any">
     <link rel="icon" type="image/png" href="icons/favicon-calendar-512.png" sizes="512x512">
     <link rel="apple-touch-icon" href="icons/apple-touch-icon-calendar-180.png" sizes="180x180">
