--- a/templates/dailyblogtemplate.html
+++ b/templates/dailyblogtemplate.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <h1>
-        <a href="index.html">{{ vars.title }}: {{ vars.date }}</a>
+        <a href="index.html">{{ vars.title }}</a>
         <br/>
         <span>
         {% if vars.previous is defined %}
