--- a/docs/dailyblogroll.css
+++ b/docs/dailyblogroll.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Source+Sans+3:wght@500;600&display=swap');
 
 body {
     font-family: Arial, sans-serif;
